--- a/advanced.css
+++ b/advanced.css
@@ -40,7 +40,7 @@ thead {
 }
 
 th {
-    font-size: 1.1em;
+    font-size: 1.3em;
     font-weight: bold;
     text-align: -internal-center;
 }
@@ -58,7 +58,7 @@ tbody {
 }
 
 td, th {
-    border-right: 1px solid #dcdcdc;
+    border-right: 2px solid #dcdcdc;
     padding: 8px 12px;
     display: table-cell;
     vertical-align: inherit;
@@ -107,10 +107,10 @@ blockquote, dl, ol, p, pre, ul {
 
 h1, h2, h3, h4, h5, h6 {
   margin: 1.8em 0;
-    margin-top: 1.8em;
-    margin-right: 0px;
-    margin-bottom: 1.8em;
-    margin-left: 0px;
+  margin-top: 1.8em;
+  margin-right: 0px;
+  margin-bottom: 1.8em;
+  margin-left: 0px;
   line-height: 1.33;
 }
 
@@ -122,22 +122,24 @@ h1 {
   -webkit-margin-start: 0px;
   -webkit-margin-end: 0px;
   font-weight: bold;
+  text-align: center;
 }
 
 h2 {
     display: block;
-    font-size: 1.53em;
+    font-size: 1.5em;
     -webkit-margin-before: 0.83em;
     -webkit-margin-after: 0.83em;
     -webkit-margin-start: 0px;
     -webkit-margin-end: 0px;
+    text-align:  center;
     font-weight: bold;
 }
 
 h3 {
   display: block;
-  font-size: 1.17em;
-  -webkit-margin-before: 1em;
+  font-size: 1.20em;
+  -webkit-margin-before: 1.5em;
   -webkit-margin-after: 1em;
   -webkit-margin-start: 0px;
   -webkit-margin-end: 0px;
@@ -167,6 +169,5 @@ h1:after, h2:after {
     display: block;
     position: relative;
     top: .33em;
-    border-bottom: 1px solid hsla(0,0%,50%,.2);
+    border-bottom: 2px solid hsla(0,0%,50%,.2);
 }
-
